@@ -20,6 +20,7 @@ Changelog
  * Fix: Focal area removal not working in IE11 and MS Edge (Thibaud Colas)
  * Fix: Rewrite password change feedback message to be more user-friendly ( Casper Timmers)
  * Fix: Correct dropdown arrow styling in Firefox, IE11 (Janneke Janssen, Alexs Mathilda)
+ * Fix: Password reset no indicates specific validation errors on certain password restrictions (Lucas Moeskops)
 
 
 2.0.1 (xx.xx.xxxx) - IN DEVELOPMENT
